There is now a permenant rectangle on the screen that the user lines up the card in to remove noise in the edge detection. Also passes the image to processImage which creates the color histogram

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".OpenCVCamera">
+        <activity android:name=".OpenCVCamera"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
     </application>
 
