--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mobilecomputing.sbarth.mtgcardscanner">
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -28,9 +29,10 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".OpenCVCamera"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-        </activity>
+        <activity
+            android:name=".OpenCVCamera"
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+        <activity android:name=".SearchResults"></activity>
     </application>
 
 </manifest>
