Made the search results list view clickable, and added a new activity to display the card image, which i will implement later

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,9 @@
 
         <activity
             android:name=".OpenCVCamera"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
-        <activity android:name=".SearchResults"></activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".SearchResults" />
+        <activity android:name=".CardImage"></activity>
     </application>
 
 </manifest>
