--- a/openCVLibrary331/build.gradle
+++ b/openCVLibrary331/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
-        minSdkVersion 15
+        compileSdkVersion 25
         targetSdkVersion 25
+        buildToolsVersion "25.0.3"
     }
 
     buildTypes {
