added users cards to file for extraction later

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:name=".OpenCVCamera"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".SearchResults" />
-        <activity android:name=".CardImage"></activity>
+        <activity android:name=".CardImage" />
+        <activity android:name=".Library"></activity>
     </application>
 
 </manifest>
