--- a/openCVLibrary331/build.gradle
+++ b/openCVLibrary331/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
-        compileSdkVersion 25
+        minSdkVersion 15
         targetSdkVersion 25
-        buildToolsVersion "25.0.3"
     }
 
     buildTypes {
