User can now click on a card in the library to be directed to a new activity where they can perform a google search on the card

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".SearchResults" />
         <activity android:name=".CardImage" />
-        <activity android:name=".Library"></activity>
+        <activity android:name=".Library" />
+        <activity android:name=".CardInfo"></activity>
     </application>
 
 </manifest>
